--- a/src/Styles/HeaderInit.module.css
+++ b/src/Styles/HeaderInit.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: flex-end; 
     align-items: center;
-    background-color: #FFFFFF;
+    background-color:  #8FA9C6;
     padding: 15px 20px;
     border-radius: 12px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.05);
